[package]
name = "vm-fdt"
version = "0.2.0"
description = "Crate for writing Flattened Devicetree blobs"
authors = ["The Chromium OS Authors"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"
repository = "https://github.com/rust-vmm/vm-fdt"
keywords = ["fdt"]

[features]
# This feature was added as a way to exclude long running tests in development.
# `cargo test` does not run tests for all features by default. The vm-fdt
# developer can thus choose to "hide" a long running under this feature.
# One example of a long running test is the test that checks for overflows
# caused by large memory allocations.
#
# The rust-vmm-ci will still run these tests.
long_running_test = []
